improves color contrast issues with the navbar

--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -37,3 +37,13 @@
   .list-group;
   overflow: hidden;
 }
+
+.moin-navbar-inverse {
+  .navbar-inverse;
+  background-color: darken(@moin-navbar-inverse-color, 5%);
+  .navbar-nav {
+    > li > a {
+      color: lighten(@moin-navbar-inverse-color, 55%);
+    }
+  }
+}
