--- a/MoinMoin/themes/basic/static/custom-less/variables.less
+++ b/MoinMoin/themes/basic/static/custom-less/variables.less
@@ -245,6 +245,10 @@
 
 // Inverted navbar
 //
+
+// Moin-Inverted Navbar
+@moin-navbar-inverse-color:					#205081;
+
 // Reset inverted navbar basics
 @navbar-inverse-color:                      @gray-light;
 @navbar-inverse-bg:                         #222;
